# ARA-Multipurpose-AI-App

./: .env  .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  vitest.workspace.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
apps/desktop/: .gitignore  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: architecture.md  autofill-fix.md  cpu-models.md  cpu-optimization.md  deepseek-ocr.md  development.md  fast-testing.md  handwriting-ocr.md  new-form-changes.md  ollama-models.md  ollama-setup.md  ollama-troubleshooting.md  optimizations.md  pipeline-overview.md  testing.md
docs/refactor/: 2026-04-22-meeting-notes.md  2026-04-22-refactor-summary.md  README.md  overview.md  phase-1-input-to-summary.md  phase-2-custom-prompts.md  phase-3-persistence.md  phase-4-rag.md
scripts/: benchmark-models.ps1  bootstrap.ps1  clean.js  create-template-pdf.js  setup-ollama.bat  setup-qwen3.ps1  setup-qwen3.sh  setup.js  setup.ps1  setup.sh  verify.js
scripts/scripts/: verify.sh
services/local-ai/: .env.example  .env.test  .gitignore  MODEL_SETUP.md  Modelfile  openapi.yaml  package.json  vitest.config.ts
templates/: README.md  generate-template.js  package-lock.json  package.json
templates/mccmc_v1/: mapping.json
templates/mccmc_v2/: mapping.json
(+77 files in other folders)
